@@ -1,4 +1,5 @@
 0.24:
+ * Fixed --max-file-lag not working with some custom log files.
  * Gource will stop at the end of the log by default when recording a video.
  * Now using standard autotools (Flameeyes).
  * PPM output speed improvements, including using a second thread (HighlandSun).
